--- a/AppointmentScheduleSystem.csproj
+++ b/AppointmentScheduleSystem.csproj
@@ -41,6 +41,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.22.0" />
+    <PackageReference Include="Enums.NET" Version="4.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
